Fixed: Vertical sidebox image alignment

--- a/site-sass/site-specific/site.post-standard.scss
+++ b/site-sass/site-specific/site.post-standard.scss
@@ -170,6 +170,17 @@
 	margin-bottom: 20px;
 }
 
+.fs-sidebar .side-box a {
+  display: block;
+  max-width: 346.667px;
+  max-height: 195px;
+  overflow: hidden;
+
+  img {
+    margin-top: -50%;
+    margin-bottom: -50%;
+  }
+}
 
 .fs-sidebar .side-box:last-child {
 
